--- a/about.qmd
+++ b/about.qmd
@@ -1,19 +1,16 @@
 ---
 title: "About"
-image: profile.jpg
+image: avatar.jpg
 about:
-  template: jolla
+  template: trestles
+  image-shape: rounded
   links:
-    - icon: twitter
-      text: Twitter
-      href: https://twitter.com
     - icon: linkedin
       text: LinkedIn
-      href: https://linkedin.com
+      href: https://www.linkedin.com/in/jiehua/
     - icon: github
       text: Github
-      href: https://github.com
-
+      href: https://github.com/jiehua1995
 ---
+I am now a doctoral student in Biomedical center, LMU.
 
-About this blog
