--- a/index.qmd
+++ b/index.qmd
@@ -1,13 +1,12 @@
 ---
-title: "Jie Hua's Bioinformatics Notes"
+title: "Home"
 listing:
   contents: posts
   sort: "date desc"
-  type: default
-  categories: true
+  type: grid
+  categories: numbered
   sort-ui: true
   filter-ui: true
-  feed: true
 page-layout: full
-title-block-banner: true
+title-block-banner: false
 ---
