--- a/index.qmd
+++ b/index.qmd
@@ -7,6 +7,7 @@ listing:
   categories: numbered
   sort-ui: true
   filter-ui: true
+  feed: true
 page-layout: full
 title-block-banner: false
 ---
