--- a/404.qmd
+++ b/404.qmd
@@ -2,17 +2,26 @@
 title: Page Not Found
 ---
 
-The page you requested cannot be found (perhaps it was moved or renamed).
-
-You may want to try searching to find the page's new location.
-
-**EN**: This page displays a missing child. Please take a moment to look — your attention could make a difference.\
-**DE**: Diese Seite zeigt ein vermisstes Kind. Ihre Aufmerksamkeit zählt.\
-**FR**: Cette page affiche un enfant disparu. Votre regard peut tout changer.\
-**ZH**: 本页面展示的是失踪儿童信息，感谢您花一点时间关注他们。\
-**JA**: このページには行方不明の子供が表示されます。ご協力をお願いします。\
-**KO**: 이 페이지에는 실종 아동 정보가 표시됩니다. 잠시만 주목해 주세요.
-
 ```{=html}
-<iframe src="https://notfound-static.fwebservices.be/en/404?key=67fd19cb03e59" width="100%" height="650" frameborder="0"></iframe>
+<div style="align-items:center; justify-content:center;text-align:center;font-family:'Segoe UI';">
+ <h1 style="font-size:5em; color:#2e8b57; margin:0.2em 0;">404</h1>
+
+  <h2 style="font-size:1.8em; margin-bottom:0.5em;">Gene Not Found in This Genome</h2>
+
+  <p style="font-size:1.2em; max-width:600px; margin:0 auto;">
+    Just like PCR without primers, we couldn't amplify the page you're looking for.
+  </p>
+
+  <div style="font-family:monospace; font-size:1.2em; color:#4682b4; margin:1em 0;">
+    ATG... ??? ...TAG (translation terminated)
+  </div>
+
+  <div style="margin:2em 0;">
+    <img src="https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExZnAyZHZqaGJmcWRxbDFrNTFvcno4a2twcmdzZ3ZzYWlncXJhYTV1cCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/3o7TKLC8zBUd7eEteE/giphy.gif" alt="DNA-RNA-Protein" style="max-width:300px; height:auto;">
+  </div>
+
+  <a href="/" style="margin-top:1em; font-size:1.1em; text-decoration:none; color:#2e8b57; border:2px solid #2e8b57; padding:0.5em 1em; border-radius:5px; transition:0.3s;">
+    Return to Home
+  </a>
+  </div>
 ```
