--- a/about.qmd
+++ b/about.qmd
@@ -11,6 +11,9 @@ about:
     - icon: github
       text: Github
       href: https://github.com/jiehua1995
+    - icon: person-badge
+      text: ORCID
+      href: https://orcid.org/0000-0003-4910-0945
 ---
 I am now a doctoral student in Biomedical center, LMU.
 
